ibus-hangul (1.2.0.20090617-2) UNRELEASED; urgency=low

  * debian/control:
    - build-depends: libhangul-dev >= 0.0.9

 -- LI Daobing <lidaobing@debian.org>  Sat, 27 Jun 2009 13:52:08 +0800

ibus-hangul (1.2.0.20090617-1) unstable; urgency=low

  * new upstream release.
  * debian/control:
    - build-depends: libibus-dev >= 1.2
    - depends: ibus >= 1.2
    - bump standards version to 3.8.2

 -- LI Daobing <lidaobing@debian.org>  Fri, 26 Jun 2009 23:46:15 +0800

ibus-hangul (1.1.0.20090328-1) unstable; urgency=low

  * initial release to Debian (closes: #521628)
  * new upstream release.
  * debian/control: 
    - build depends on libibus-dev.
    - change maintainer's email.
    - bump standards version to 3.8.1.
    - depends on ${python:Depends}.
  * debian/patches/01_engine.dpatch: no longer needed, removed.
  * no patch needed. remove dpatch from debian/*.
  * debian/rules: install README and AUTHORS 

 -- LI Daobing <lidaobing@debian.org>  Thu, 23 Apr 2009 20:13:52 +0800

ibus-hangul (1.1.0.20090328-0ubuntu1) karmic; urgency=low

  * new upstream release (LP: #370199).
  * debian/control: 
    - build depends on libibus-dev.
    - change maintainer's email.
    - bump standards version to 3.8.1.
    - depends on ${python:Depends}.
  * debian/patches/01_engine.dpatch: no longer needed, removed.
  * no patch needed. remove dpatch from debian/*.
  * debian/rules: install README and AUTHORS 

 -- LI Daobing <lidaobing@debian.org>  Fri, 01 May 2009 12:42:43 +0800

ibus-hangul (0.1.1.20081023-0ubuntu2) jaunty; urgency=low

  * No changes. Rebuild to build with Python 2.6. (LP: #336534)

 -- LI Daobing <lidaobing@gmail.com>  Sat, 14 Mar 2009 22:26:32 +0800

ibus-hangul (0.1.1.20081023-0ubuntu1) jaunty; urgency=low

  * Initial release (LP: #312446)

 -- LI Daobing <lidaobing@gmail.com>  Fri, 13 Feb 2009 20:45:24 +0800