@@ -1,7 +1,11 @@
 ibus-hangul (1.2.0.20090617-2) UNRELEASED; urgency=low
 
+  [ LI Daobing ]
   * debian/control:
     - build-depends: libhangul-dev >= 0.0.9
+
+  [ Loïc Minier ]
+  * Drop useless CROSS logic in rules; build uses dh_auto_configure.
 
  -- LI Daobing <lidaobing@debian.org>  Sat, 27 Jun 2009 13:52:08 +0800
 
